[gd_scene load_steps=33 format=2]

[ext_resource path="res://entities/damage_shader.gdshader" type="Shader" id=1]
[ext_resource path="res://assets/images/enemies/pineapple-enemy.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/pineapple/pineapple.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/87535__whiprealgood__splat.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/images/banana_slide/slide_particle.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/intensity = 0.0

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 30 ), SubResource( 29 ) ],
"loop": true,
"name": "Take_Damage",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Jump_Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "Chest_Bump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 11.6869, 17.954 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 11.6258, 18.0845 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 11.6258, 18.5151 )

[sub_resource type="ParticlesMaterial" id=25]
emission_shape = 2
emission_box_extents = Vector3( 40, 5, 1 )
flag_disable_z = true
direction = Vector3( 10, 5, 0 )
gravity = Vector3( 0, -10, 0 )
angular_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 44.1319, 25.773 )

[node name="pineapple" type="KinematicBody2D"]
scale = Vector2( 2.83242, 2.83242 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="Image" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -0.293777, -14.503 )
frames = SubResource( 21 )
animation = "Idle"
playing = true

[node name="damage_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="BoundingBox" type="CollisionShape2D" parent="."]
position = Vector2( 0.136806, -0.293781 )
shape = SubResource( 22 )

[node name="LeftChestBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="LeftChestBoxCollision" type="CollisionShape2D" parent="LeftChestBox"]
position = Vector2( -19.418, -0.353055 )
shape = SubResource( 23 )

[node name="RightChestBox" type="Area2D" parent="."]
position = Vector2( 32.8341, -1.76527 )
collision_layer = 0
collision_mask = 2

[node name="RightChestBoxCollision" type="CollisionShape2D" parent="RightChestBox"]
position = Vector2( -17.9474, 0.861167 )
shape = SubResource( 24 )

[node name="JumpAttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="JumpParticles" type="Particles2D" parent="JumpAttackBox"]
position = Vector2( -1.41222, 10.9447 )
emitting = false
amount = 50
lifetime = 0.1
explosiveness = 1.0
process_material = SubResource( 25 )
texture = ExtResource( 5 )

[node name="JumpAttackBoxCollision" type="CollisionShape2D" parent="JumpAttackBox"]
shape = SubResource( 26 )
disabled = true

[node name="Projectiles" type="Node" parent="."]

[connection signal="animation_finished" from="Image" to="." method="_on_Image_animation_finished"]
[connection signal="body_entered" from="LeftChestBox" to="." method="_on_ChestBox_body_entered"]
[connection signal="body_entered" from="RightChestBox" to="." method="_on_ChestBox_body_entered"]
[connection signal="body_entered" from="JumpAttackBox" to="." method="_on_JumpAttackBox_body_entered"]
